# toyEx_CasADi

./: .gitignore  README.md
c++/: CMakeLists.txt  ex1.cpp  ex_c_codegen_usage2.cpp
c++/c_casEx/: CMakeLists.txt  envVars.sh
py2cpp/: libGen.py  libGenFunction.py  libGenSolver.py
py2cpp/c_code/: libExample.c  libExampleFun.c  libSolver.c
py2cpp/cpp/: CMakeLists.txt  envVars.sh  libUse.cpp  libUseFunction.cpp  libUseSolver.cpp
python/: controlsimulator_replacement.py  ex1.py  race_car.py  splines.py
